# Data_assimilation_pangu

./: .gitignore  README.md  requirements.txt
data/era5_dataloader/: era5.py  era_imerg.py  find_norm_tensors.py  netcdf.py
models/pangu/: config.yaml  execute.sh  pangu_lora_training.py  prio_knowledge_training_single_gpu.py  pyproject.toml  requirements.txt  utils.py
models/pangu/weatherlearn_utils/: LICENSE
